--- a/BrowserSbomTool/Pages/Viewer.razor
+++ b/BrowserSbomTool/Pages/Viewer.razor
@@ -4,7 +4,7 @@
 @using DemaConsulting.SpdxModel.IO
 @using System.Text.Json.Nodes
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Viewer</PageTitle>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
